@@ -1,3 +1,8 @@
+2004-06-17  Anthony Green  <green@redhat.com>
+
+	* java/util/zip/ZipFile.java (getInputStream): Return null if
+	entry not found.
+
 2004-08-10  Hans Boehm <Hans.Boehm@hp.com>
 
 	PR libgcj/16662
